--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,59 @@ color: #FFFFFF;
 .limarg{
   margin-right: 72px;
 }
+
+/* sectionn */
+
+section{
+  width: 1440px;
+  background-color: #D4F3F0;
+  margin: auto;
+  padding: 80px 130px;
+}
+
+.cover{
+  vertical-align: top;
+  margin-right: 115px;
+}
+
+article{
+  display: inline-block;
+  width: 460px;
+  vertical-align: top;
+}
+
+.h-article{
+font-weight: 700;
+font-style: Italic;
+font-size: 32px;
+line-height: 40px;
+letter-spacing: 1.5px;
+color: #06686E;
+margin-bottom: 32px;
+}
+
+.p-article{
+font-weight: 400;
+font-style: Italic;
+font-size: 18px;
+line-height: 26px;
+letter-spacing: 0.5px;
+text-align: justify;
+color: #06686E;
+margin-bottom: 42px;
+}
+
+.b-article{
+  width: 146px;
+height: 48px;
+background-color: #2A9D8F;
+border: none;
+color: #FFFFFF;
+font-weight: 700;
+font-style: Bold;
+font-size: 16px;
+line-height: 24px;
+letter-spacing: 0px;
+text-align: center;
+}
+
